# canvas-root-io

./: CMakeLists.txt  CMakePresets.json
Modules/: ArtDictionary.cmake  CMakeLists.txt
canvas_root_io/: CMakeLists.txt
canvas_root_io/Dictionaries/canvas/Provenance/: CMakeLists.txt  classes.h  classes_def.xml
canvas_root_io/Dictionaries/cetlib/: CMakeLists.txt
canvas_root_io/Dictionaries/clhep/: CMakeLists.txt  classes_def.xml
canvas_root_io/Dictionaries/fhiclcpp/: CMakeLists.txt  classes.h  classes_def.xml
canvas_root_io/Dictionaries/std/: CMakeLists.txt
canvas_root_io/Dictionaries/wrapped_std/: CMakeLists.txt
canvas_root_io/Streamers/: BranchDescriptionStreamer.cc  BranchDescriptionStreamer.h  CacheStreamers.cc  RefCoreStreamer.cc  TransientStreamer.h  setPtrVectorBaseStreamer.cc
canvas_root_io/Utilities/: DictionaryChecker.cc  DictionaryChecker.h  TypeTools.cc  TypeTools.h  TypeWithDict.cc  TypeWithDict.h  getWrapperTIDs.cc  getWrapperTIDs.h
canvas_root_io/test/: CMakeLists.txt
canvas_root_io/test/Aggregate/: CMakeLists.txt  aggregate_th1_t.cc
canvas_root_io/test/Utilities/: CMakeLists.txt  RootClassMapping_t.cc  RootClassMapping_t.h  TWD_minimal_t.cc  TypeNameBranchName_t.cc  TypeNameBranchName_t.h  TypeTools_t.cc  TypeWithDict_t.cc
canvas_root_io/test/io-rules-regression/: CMakeLists.txt  EDProduct.h  Wrapper.h  setupRoot.cc  vertex_reader.cc.in  vertex_writer.cc.in
canvas_root_io/test/io-rules-regression/standalone/: make_standalone_tarball  run_standalone
canvas_root_io/test/io-rules-regression/v11/: CMakeLists.txt
canvas_root_io/test/io-rules-regression/v11a/: CMakeLists.txt
canvas_root_io/test/io-rules-regression/v11b/: CMakeLists.txt
config/: canvas_root_io-config-module-path.cmake.in
docs/: CMakeLists.txt  conf.py.in  depends.rst  helpers.py  index.rst  release-notes  releaseNotes.rst  series_temp.rst  suite_temp.rst  temp.rst
docs/series_notes/: general_description.rst
tools/: CMakeLists.txt
tools/ROOT_JIRA_10504/: .gitignore  00README.md  bad.h  bad.i  buildit.sh  runit.sh  tarit.sh  tidy.sh
tools/migration/: CMakeLists.txt
ups/: product-config.cmake.in  product_deps  setup_for_development
